--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AgendaDiaria.cs" />
     <Compile Include="FrmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
