--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
@@ -58,6 +58,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmAbrirCaja.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAbrirCaja.Designer.cs">
+      <DependentUpon>FrmAbrirCaja.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmAgendarAtencion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioLogeado.cs" />
+    <EmbeddedResource Include="FrmAbrirCaja.resx">
+      <DependentUpon>FrmAbrirCaja.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmAgendarAtencion.resx">
       <DependentUpon>FrmAgendarAtencion.cs</DependentUpon>
     </EmbeddedResource>
