--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
@@ -82,6 +82,12 @@
     <Compile Include="FrmCrearPaciente.Designer.cs">
       <DependentUpon>FrmCrearPaciente.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmAnularAtencion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAnularAtencion.Designer.cs">
+      <DependentUpon>FrmAnularAtencion.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmIngresarPaciente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +121,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmCrearPaciente.resx">
       <DependentUpon>FrmCrearPaciente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmAnularAtencion.resx">
+      <DependentUpon>FrmAnularAtencion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmIngresarPaciente.resx">
       <DependentUpon>FrmIngresarPaciente.cs</DependentUpon>
