--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
@@ -58,11 +58,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FrmOrdenAnalisis.cs">
+    <Compile Include="FrmAnularAtencionDerivacion.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmOrdenAnalisis.Designer.cs">
-      <DependentUpon>FrmOrdenAnalisis.cs</DependentUpon>
+    <Compile Include="FrmAnularAtencionDerivacion.designer.cs">
+      <DependentUpon>FrmAnularAtencionDerivacion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmAgendarAtencionDerivacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAgendarAtencionDerivacion.Designer.cs">
+      <DependentUpon>FrmAgendarAtencionDerivacion.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmAgendarAtencion.cs">
       <SubType>Form</SubType>
@@ -86,8 +92,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioLogeado.cs" />
-    <EmbeddedResource Include="FrmOrdenAnalisis.resx">
-      <DependentUpon>FrmOrdenAnalisis.cs</DependentUpon>
+    <EmbeddedResource Include="FrmAnularAtencionDerivacion.resx">
+      <DependentUpon>FrmAnularAtencionDerivacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmAgendarAtencionDerivacion.resx">
+      <DependentUpon>FrmAgendarAtencionDerivacion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmAgendarAtencion.resx">
       <DependentUpon>FrmAgendarAtencion.cs</DependentUpon>
