--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/App.config
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/App.config
@@ -53,4 +53,16 @@
 			</dataSources>
 		</version>
 	</oracle.manageddataaccess.client>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_ISeguroWS" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:8733/Design_Time_Addresses/Cheekibreeki.CMH.Seguro.WS/Service1/"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISeguroWS"
+        contract="SeguroServiceReference.ISeguroWS" name="BasicHttpBinding_ISeguroWS" />
+    </client>
+  </system.serviceModel>
 </configuration>
