--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
@@ -71,6 +71,12 @@
     <Compile Include="FrmContenidoEntrada.Designer.cs">
       <DependentUpon>FrmContenidoEntrada.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmEnfermero.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmEnfermero.Designer.cs">
+      <DependentUpon>FrmEnfermero.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmJefeOp.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,6 +110,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmAgendarAtencion.resx">
       <DependentUpon>FrmAgendarAtencion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmEnfermero.resx">
+      <DependentUpon>FrmEnfermero.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmJefeOp.resx">
       <DependentUpon>FrmJefeOp.cs</DependentUpon>
