--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
@@ -59,6 +59,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AgendaDiaria.cs" />
+    <Compile Include="FemEnfermero.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FemEnfermero.Designer.cs">
+      <DependentUpon>FemEnfermero.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmAgendarAtencion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +105,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioLogeado.cs" />
+    <EmbeddedResource Include="FemEnfermero.resx">
+      <DependentUpon>FemEnfermero.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmContenidoEntrada.resx">
       <DependentUpon>FrmContenidoEntrada.cs</DependentUpon>
     </EmbeddedResource>
