--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
@@ -75,6 +75,12 @@
     <Compile Include="FrmAgendarAtencion.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FrmAgendarAtencion.Designer.cs">
+      <DependentUpon>FrmAgendarAtencion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmCrearPaciente.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmCrearPaciente.Designer.cs">
       <DependentUpon>FrmCrearPaciente.cs</DependentUpon>
     </Compile>
@@ -101,12 +107,6 @@
     </Compile>
     <Compile Include="FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FrmAgendarAtencion.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmAgendarAtencion.Designer.cs">
-      <DependentUpon>FrmAgendarAtencion.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmIngresarPaciente.cs">
       <SubType>Form</SubType>
@@ -142,8 +142,14 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioLogeado.cs" />
+    <EmbeddedResource Include="FrmAbrirCaja.resx">
+      <DependentUpon>FrmAbrirCaja.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FemEnfermero.resx">
       <DependentUpon>FemEnfermero.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmAgendarAtencion.resx">
+      <DependentUpon>FrmAgendarAtencion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmContenidoEntrada.resx">
       <DependentUpon>FrmContenidoEntrada.cs</DependentUpon>
@@ -159,9 +165,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmAgendarAtencion.resx">
-      <DependentUpon>FrmAgendarAtencion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmIngresarPaciente.resx">
       <DependentUpon>FrmIngresarPaciente.cs</DependentUpon>
