--- a/cmh/webapp/web/WEB-INF/web.xml
+++ b/cmh/webapp/web/WEB-INF/web.xml
@@ -32,6 +32,10 @@
         <servlet-name>Anular</servlet-name>
         <servlet-class>cl.cheekibreeki.cmh.webapp.servlet.Anular</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Resultados</servlet-name>
+        <servlet-class>cl.cheekibreeki.cmh.webapp.servlet.Resultados</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Router</servlet-name>
         <url-pattern>/Router.do</url-pattern>
@@ -63,6 +67,10 @@
     <servlet-mapping>
         <servlet-name>Anular</servlet-name>
         <url-pattern>/Anular.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Resultados</servlet-name>
+        <url-pattern>/Resultados.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
