--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
@@ -59,7 +59,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FrmJefeOp.Designer.cs">
+    <Compile Include="FrmJefeOp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmJefeOp.designer.cs">
       <DependentUpon>FrmJefeOp.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmJefeOperador.cs">
