--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.Views/CheekiBreeki.CMH.Terminal.Views.csproj
@@ -59,6 +59,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmTecnologo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmTecnologo.Designer.cs">
+      <DependentUpon>FrmTecnologo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmEnfermero.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -179,6 +185,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioLogeado.cs" />
+    <EmbeddedResource Include="FrmTecnologo.resx">
+      <DependentUpon>FrmTecnologo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmAbrirCaja.resx">
       <DependentUpon>FrmAbrirCaja.cs</DependentUpon>
     </EmbeddedResource>
